tests/baselines/reference/FunctionPropertyAssignments3_es6.errors.txt
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments3_es6.ts(1,12): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments3_es6.ts (1 errors) ====
    var v = { *{ } }
               ~
!!! error TS1003: Identifier expected.